objects/DataDotComDemoAccountResetValues__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AnnualRevenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingCity__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCountry__c</fullName>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingPostalCode__c</fullName>
        <label>Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingState__c</fullName>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStreet__c</fullName>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DunsNumber__c</fullName>
        <label>D-U-N-S Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NaicsCode__c</fullName>
        <label>NAICS Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NaicsDesc__c</fullName>
        <label>NAICS Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfEmployees__c</fullName>
        <label>Number Of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>Ownership</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SicDesc__c</fullName>
        <label>SIC Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sic__c</fullName>
        <label>SIC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Account Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tradestyle__c</fullName>
        <label>Tradestyle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YearStarted__c</fullName>
        <label>Year Started</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Data Dot Com Demo Account Reset Values</label>
</CustomObject>